@@ -1,0 +1,4 @@
+/**
+ * https://github.com/jayway/powermock/issues/352
+ */
+package samples.powermockito.junit4.bugs.github352;
