@@ -9,6 +9,7 @@ Change log next version
 * Fix #648: TestNG SkipException doesn't work with PowerMock
 * Fix #652: PowerMock stubbing void method don't work for overloaded methods
 * Fix #510: Static method mocking with Mockito 1.9.5 and Powermock fails with Java 8 Consumer Interface
+* Fix #352: PowerMockRunner should run tests defined in super class
 * Added support for @TestSubject in EasyMock API. This is the equivalent of @InjectMocks in Mockito (big thanks to Arthur Zagretdinov for pull request)
 * Added experimental support for mockito 2.x
 * Upgraded commons-logging dependency to version 1.2
